--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,10 @@ name: SUPERPORTAL
 version: '${project.version}'
 main: com.promc.SUPERPORTAL
 api-version: 1.16
-depend: [ WorldGuard ]
+depend:
+  - WorldGuard
+softdepend:
+  - PlaceholderAPI
 authors: [ TUCAOEVER ]
 
 commands:
